[package]
name = "lsystem"
license = "MIT"
repository = "https://github.com/viktordanov/rs-lsystem"
description = "An implementation of a stochastic parameterized Lindenmayer systems (L-systems) in Rust focusing on performance."
version = "1.0.0"
authors = ["Viktor Danov"]
edition = "2021"

[dependencies]
rand = "0.8"
anyhow = "1.0.75"
thiserror = "1.0.50"
criterion-cycles-per-byte = "0.5.0"
array-init = "2.1.0"

[dev-dependencies]
criterion = { version = "0.5.1" }

[[bench]]
name = "lsystem"
harness = false

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = "abort"

[[example]]
name = "algae"
path = "cmd/algae.rs"
